# Graphics_Project

./: .gitignore  3D_Library.slnx  3D_Library.vcxproj  3D_Library.vcxproj.filters  AGENTS.md  CLAUDE.md  CMakeLists.txt  Phase1_AgentPrompt.md  Phase3_Primitives.md  Phase4_CameraSystem.md  Phase5_SceneConstruction.md  Phase6_TextureMapping.md  README.md  gfx_req.md  project_proposal.md  project_report.tex
shaders/: basic.frag  basic.vert  texture_fragment_blend.frag  texture_fragment_blend.vert  texture_simple.frag  texture_simple.vert  texture_vertex_blend.frag  texture_vertex_blend.vert
src/: main.cpp
src/core/: Camera.cpp  Camera.h  InputHandler.cpp  InputHandler.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Window.cpp  Window.h
src/renderer/: Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  Renderer.h  Texture.cpp  Texture.h  TextureManager.h
src/scene/: LibraryColors.h  LightState.h  Scene.cpp  Scene.h  SceneObject.h  TextureMode.h
src/utils/: FileUtils.h  Logger.h  Transform.h
